2013-08-30  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygheap.h (user_heap_info::sbrk): Declare new function.
	(user_heap_info::init): Ditto.
	* heap.cc (user_heap_info::init): Rename from heap_init().  Avoid
	explictly using cygheap->user_heap.
	(sbrk): Use user_heap_info method via cygheap->user_heap.
	(user_heap_info::sbrk): Renamed from sbrk().  Eliminate explicit use of
	cygheap->user_heap.  Change some pointer arithmetic to use (char *) for
	consistency.
	* shared.cc (shared_info::initialize): Change heap_init call to
	cygheap->user_heap.init.

2013-08-30  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (sbrk): Add a FIXME comment to VirtualFree call.  Fix memory
	reservation and commit strategy when more memory is requested than
	available on the heap.  Release newly reserved memory if commiting
	it fails.  Add more comments to explain what we do.

2013-08-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tape.cc (mtinfo_drive::open): Handle bus reset gracefully
	after opening the device.

2013-08-30  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* sigproc.cc (pending_signals::add): Properly maintain linked list.
	(wait_sig): Use already calculated 'next' element when signal is
	blocked.

2013-08-26  Corinna Vinschen  <corinna@vinschen.de>

	* mtinfo.h (class mtinfo_part): Change type of block numbers to int64_t.
	(mtinfo_part::initialize): Ditto for nblock parameter in declaration.
	(class mtinfo_drive): Change type of block number to int64_t.  Change
	all parameters indicating a block number to int64_t in method
	declarations.
	* fhandler_tape.cc (mtinfo_part::initialize): Ditto in definition.
	(mtinfo_drive::get_pos): Ditto.  Replace low and high with a
	ULARGE_INTEGER and use it's components in call to GetTapePosition.
	Store full value in block.
	(mtinfo_drive::_set_pos): Change type of count parameter to int64_t.
	Change call to SetTapePosition accordingly.
	(mtinfo_drive::set_pos): Change type of count parameter to int64_t.