@@ -1,3 +1,10 @@
+2013-08-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* heap.cc (RAISEHEAP_SIZE): New definition.
+	(user_heap_info::sbrk): Make failed commit an error condition again.
+	Only reserve RAISEHEAP_SIZE sized chunk for further heap reservations
+	by default.
+
 2013-08-30  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
 	* cygheap.h (user_heap_info::sbrk): Declare new function.
